[tool.poetry]
name = "gasprice"
version = "1.2.0"
description = "predict ethereum gas price"
authors = ["banteg <banteeg@gmail.com>"]
license = "MIT"
repository = "https://github.com/banteg/gasprice"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.6"
sanic = "^19.3"
web3 = "^4.9"
pandas = "^0.24.2"
numpy = "1.17.4"
click = "^7.0"
retry = "^0.9.2"
uvloop = "0.14.0"

[tool.poetry.scripts]
gasprice = "gasprice:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
